<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mdp_bringup</name>
  <version>0.1.0</version>
  <description>Bringup launch files for MDP 2026 FloraNova greenhouse robot (Empty - use mdp_slam or mdp_localization)</description>
  <maintainer email="ignacio.quintanilla@hotmail.com">MDP Group 25</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>twist_mux</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
